k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: guarantee
  labels:
    name: guarantee
